# porfolio

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  BACKEND_FRONTEND_INTEGRATION_ANALYSIS.md  CODE_ANALYSIS_REPORT.md  CONTACT_SETUP.md  DEPLOYMENT.md  FEATURES_OVERVIEW.md  INTEGRATION_SUMMARY.md  PRODUCTION_CHECKLIST.md  README.md  README_IMPROVEMENTS.md  SECURITY.md  SECURITY_AUDIT.md  TECHNICAL_DOCUMENTATION.md  deploy-security.sh  deploy.sh  docker-compose.yml  netlify.toml  test_contact.py  test_integration.py
backend/: .env  .env.example  .env.production  Dockerfile  README.md  deploy.sh  didier-portfolio.service  nginx.example  portfolio_backend.service  pyproject.toml  requirements-kb.txt  requirements.txt
backend/portfolio_backend/: .env  .env.example  db.sqlite3  ingest_docs.py  populate_data.py  populate_projects.py  production_settings.py  requirements.txt  security_middleware.py  setup_email.py  test_email.py  test_frontend_data.py
backend/portfolio_backend/api/: admin.py  admin_views.py  ai_llm.py  ai_secretary.py  ai_utils.py  analytics_service.py  authentication.py  build_kb.py  career_document_processor.py  cv_generator.py  document_processor.py  document_views.py  gemini_service.py  health.py  journal_ai_service.py  journal_models.py  local_llm.py  models.py  permissions.py  profile_builder.py  serializers.py  skill_recommender.py  tasks.py  test_api.py  tests.py  urls.py  utils.py  validators.py  views.py  views_ai.py  views_ai_secretary.py
backend/portfolio_backend/api/kb/: README.md  corpus.jsonl  faiss.index
backend/portfolio_backend/api/v1/: urls.py  (+5 more)
backend/portfolio_backend/portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
backend/portfolio_backend/portfolio_backend/: __init__.py  asgi.py  celery.py  settings.py  settings_prod.py  urls.py
backend/portfolio_backend/rest_framework_simplejwt/: __init__.py  authentication.py  tokens.py  views.py
(+186 files in other folders)
