[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Portfolio backend with Django and Gemini AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "django-cors-headers>=4.3.1",
    "django-filter>=25.1",
    "django-ratelimit>=4.1.0",
    "drf-spectacular>=0.28.0",
    "python-dotenv>=1.1.1",
    "dj-database-url>=3.0.1",
    "google-generativeai>=0.8.5",
    "gunicorn>=21.2.0",
]